Wagon: Deploying site to repository

--- a/dependency-updates-report.html
+++ b/dependency-updates-report.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -244,7 +244,7 @@
 <td>junit</td>
 <td>junit</td>
 <td>4.11</td>
-<td>test</td>
+<td>compile</td>
 <td></td>
 <td>jar</td>
 <td></td>
@@ -391,7 +391,7 @@
 <td>4.11</td></tr>
 <tr class="a">
 <th width="80%">Scope</th>
-<td>test</td></tr>
+<td>compile</td></tr>
 <tr class="b">
 <th width="80%">Classifier</th>
 <td></td></tr>
