--- a/file-activity.html
+++ b/file-activity.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -189,40 +189,46 @@
 <h2>File Activity Report<a name="File_Activity_Report"></a></h2>
 <div class="section">
 <h3>Changes between 2013-10-17 and 2013-11-17<a name="Changes_between_2013-10-17_and_2013-11-17"></a></h3>
-<p>Total commits: 55<br />Total number of files changed: 63</p>
+<p>Total commits: 65<br />Total number of files changed: 67</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Filename</th>
 <th>Number of Times Changed</th></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPath.java</b></a> </td>
-<td>11</td></tr>
+<td>12</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystem.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystem.java</b></a> </td>
-<td>9</td></tr>
+<td>11</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProvider.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProvider.java</b></a> </td>
+<td>11</td></tr>
+<tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileSystems.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileSystems.java</b></a> </td>
+<td>9</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProviderTest.java</b></a> </td>
 <td>8</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathMatcher.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathMatcher.java</b></a> </td>
 <td>7</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileSystemProviderTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileSystemProviderTest.java</b></a> </td>
-<td>7</td></tr>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> </td>
+<td>6</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsCollections.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsCollections.java</b></a> </td>
 <td>6</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileSystems.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileSystems.java</b></a> </td>
-<td>6</td></tr>
-<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsAssertions.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsAssertions.java</b></a> </td>
 <td>6</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileEntry.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileEntry.java</b></a> </td>
+<td>6</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileEntryTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileEntryTest.java</b></a> </td>
 <td>5</td></tr>
 <tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannel.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileStore.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileStore.java</b></a> </td>
 <td>4</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileAttributeView.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileAttributeView.java</b></a> </td>
@@ -237,22 +243,28 @@
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/checkstyle-suppressions.xml">src/main/config/<b>checkstyle-suppressions.xml</b></a> </td>
 <td>4</td></tr>
 <tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/pom.xml"><b>pom.xml</b></a> </td>
+<td>4</td></tr>
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsCollections.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsCollections.java</b></a> </td>
 <td>4</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsAssertionsTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsAssertionsTest.java</b></a> </td>
 <td>4</td></tr>
-<tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/README.md"><b>README.md</b></a> </td>
-<td>3</td></tr>
 <tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileEntryTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileEntryTest.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/README.md"><b>README.md</b></a> </td>
 <td>3</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsPath.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsPath.java</b></a> </td>
 <td>3</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/package-info.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>package-info.java</b></a> </td>
+<td>3</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsFileSystemsTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsFileSystemsTest.java</b></a> </td>
+<td>3</td></tr>
+<tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsIntegrationTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsIntegrationTest.java</b></a> </td>
 <td>3</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsCollectionsTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsCollectionsTest.java</b></a> </td>
@@ -270,49 +282,49 @@
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/site/markdown/index.md">src/site/markdown/<b>index.md</b></a> </td>
 <td>2</td></tr>
 <tr class="a">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileStoreTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileStoreTest.java</b></a> </td>
+<td>2</td></tr>
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsPathMatcherTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathMatcherTest.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsDirectoryStream.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsDirectoryStream.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileAttributeView.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileAttributeView.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileAttributes.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileAttributes.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileChannel.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileChannel.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileEntry.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileEntry.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileStore.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileStore.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileSystem.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileSystem.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsFileSystemProvider.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsFileSystemProvider.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsPathMatcher.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsPathMatcher.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsSeekableByteChannel.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsSeekableByteChannel.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsDirectoryStream.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsDirectoryStream.java</b></a> </td>
 <td>2</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileAttributes.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileAttributes.java</b></a> </td>
 <td>2</td></tr>
-<tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileChannel.java</b></a> </td>
-<td>2</td></tr>
 <tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsFileSystemsTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsFileSystemsTest.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileChannel.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileChannel.java</b></a> </td>
 <td>2</td></tr>
 <tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsPathTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsPathTest.java</b></a> </td>
@@ -321,67 +333,67 @@
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsPathUtil.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathUtil.java</b></a> </td>
 <td>2</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/impl/JvfsFileStore.java">src/main/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileStore.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/JvfsUnixRule.java">src/main/java/de/weltraumschaf/jvfs/<b>JvfsUnixRule.java</b></a> </td>
 <td>2</td></tr>
 <tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/site/site.xml">src/site/<b>site.xml</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsUnixRuleTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsUnixRuleTest.java</b></a> </td>
 <td>2</td></tr>
 <tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/site/site.xml">src/site/<b>site.xml</b></a> </td>
+<td>2</td></tr>
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsCollectionsTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsCollectionsTest.java</b></a> </td>
+<td>2</td></tr>
+<tr class="b">
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/IntegrationTest.java">src/test/java/de/weltraumschaf/jvfs/<b>IntegrationTest.java</b></a> </td>
 <td>2</td></tr>
 <tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/JvfsFileSystemTest.java">src/test/java/de/weltraumschaf/jvfs/<b>JvfsFileSystemTest.java</b></a> </td>
 <td>2</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/pom.xml"><b>pom.xml</b></a> </td>
-<td>2</td></tr>
-<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileAttributesTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileAttributesTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsObjectTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsObjectTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/checkstyle-ruleset.xml">src/main/config/<b>checkstyle-ruleset.xml</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/exclude-cpd.properties">src/main/config/<b>exclude-cpd.properties</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/exclude-pmd.properties">src/main/config/<b>exclude-pmd.properties</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/findbugs-exclude.xml">src/main/config/<b>findbugs-exclude.xml</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/findbugs-include.xml">src/main/config/<b>findbugs-include.xml</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/config/pmd.xml">src/main/config/<b>pmd.xml</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/main/java/de/weltraumschaf/jvfs/package-info.java">src/main/java/de/weltraumschaf/jvfs/<b>package-info.java</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/site/resources/css/site.css">src/site/resources/css/<b>site.css</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/zipfs.tar.bz2"><b>zipfs.tar.bz2</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsPathUtilTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsPathUtilTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
+<tr class="b">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/.gitignore"><b>.gitignore</b></a> </td>
 <td>1</td></tr>
-<tr class="b">
+<tr class="a">
 <td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsSeekableByteChannelTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsSeekableByteChannelTest.java</b></a> </td>
 <td>1</td></tr>
-<tr class="a">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileChannelTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileChannelTest.java</b></a> </td>
-<td>1</td></tr>
 <tr class="b">
-<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/IntegrationTest.java">src/test/java/de/weltraumschaf/jvfs/<b>IntegrationTest.java</b></a> </td>
+<td><a class="externalLink" href="https://github.com/Weltraumschaf/jvfs.git/src/test/java/de/weltraumschaf/jvfs/impl/JvfsFileChannelTest.java">src/test/java/de/weltraumschaf/jvfs/impl/<b>JvfsFileChannelTest.java</b></a> </td>
 <td>1</td></tr></table></div></div>
                   </div>
             </div>
