--- a/jdepend-report.html
+++ b/jdepend-report.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -202,14 +202,14 @@
 <th>V</th></tr>
 <tr class="b">
 <td><a href="#de.weltraumschaf.jvfs">de.weltraumschaf.jvfs</a></td>
-<td>1</td>
-<td>1</td>
+<td>2</td>
+<td>2</td>
 <td>0</td>
 <td>1</td>
-<td>4</td>
+<td>5</td>
 <td>0.0%</td>
-<td>80.0%</td>
-<td>20.0%</td>
+<td>83.0%</td>
+<td>17.0%</td>
 <td>1</td></tr>
 <tr class="a">
 <td><a href="#de.weltraumschaf.jvfs.impl">de.weltraumschaf.jvfs.impl</a></td>
@@ -233,10 +233,10 @@
 <th>Distance</th></tr>
 <tr class="a">
 <td>1</td>
-<td>4</td>
+<td>5</td>
 <td>0.0%</td>
-<td>80.0%</td>
-<td>20.0%</td></tr></table>
+<td>83.0%</td>
+<td>17.0%</td></tr></table>
 <table border="0" class="table table-striped">
 <tr class="b">
 <th>Abstract Classes</th>
@@ -245,9 +245,9 @@
 <th>Uses Packages</th></tr>
 <tr class="a">
 <td><i>None</i></td>
-<td>de.weltraumschaf.jvfs.JvfsFileSystems<br /></td>
+<td>de.weltraumschaf.jvfs.JvfsFileSystems<br />de.weltraumschaf.jvfs.JvfsUnixRule<br /></td>
 <td>de.weltraumschaf.jvfs.impl<br /></td>
-<td>de.weltraumschaf.jvfs.impl<br />java.lang<br />java.net<br />java.nio.file.spi<br /></td></tr></table><a name="de.weltraumschaf.jvfs.impl"></a>
+<td>de.weltraumschaf.jvfs.impl<br />java.lang<br />java.net<br />java.nio.file.spi<br />org.junit.rules<br /></td></tr></table><a name="de.weltraumschaf.jvfs.impl"></a>
 <h3>de.weltraumschaf.jvfs.impl<a name="de.weltraumschaf.jvfs.impl"></a></h3>
 <table border="0" class="table table-striped">
 <tr class="b">
