--- a/dev-activity.html
+++ b/dev-activity.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -189,7 +189,7 @@
 <h2>Developer Activity Report<a name="Developer_Activity_Report"></a></h2>
 <div class="section">
 <h3>Changes between 2013-10-17 and 2013-11-17<a name="Changes_between_2013-10-17_and_2013-11-17"></a></h3>
-<p>Total commits: 55<br />Total number of files changed: 63</p>
+<p>Total commits: 65<br />Total number of files changed: 67</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Developer</th>
@@ -201,8 +201,8 @@
 <td>40</td></tr>
 <tr class="a">
 <td>Weltraumschaf &lt;ich@weltraumschaf.de&gt;</td>
-<td>45</td>
-<td>50</td></tr>
+<td>55</td>
+<td>54</td></tr>
 <tr class="b">
 <td>Sven Strittmatter &lt;ich@weltraumschaf.de&gt;</td>
 <td>1</td>
