--- a/project-summary.html
+++ b/project-summary.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -205,7 +205,7 @@
 <td>jvfs</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>0.1.0-SNAPSHOT</td></tr>
+<td>0.1.0-alpha</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>jar</td></tr>
