--- a/taglist.html
+++ b/taglist.html
@@ -51,7 +51,7 @@
                 
                     
                   <li id="publishDate">Last Published: 2013-11-16</li>
-                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-SNAPSHOT</li>
+                  <li class="divider">|</li> <li id="projectVersion">Version: 0.1.0-alpha</li>
                           <li class="divider">|</li>             <li class="">
                     <a href="http://www.weltraumschaf.de" class="externalLink" title="Weltraumschaf">
         Weltraumschaf</a>
@@ -203,7 +203,7 @@
 <td>todo</td></tr>
 <tr class="b">
 <td><a href="#tag_class_1">This may be considered.</a></td>
-<td>1</td>
+<td>6</td>
 <td>xxx</td></tr></table>
 <p>Each tag is detailed below:</p>
 <div class="section">
@@ -221,32 +221,53 @@
 <th>Line</th></tr>
 <tr class="b">
 <td>Implement is empty functionality.</td>
-<td>314</td></tr>
+<td>315</td></tr>
 <tr class="a">
 <td>Implement symbolic links.</td>
-<td>324</td></tr>
+<td>327</td></tr>
 <tr class="b">
 <th>de.weltraumschaf.jvfs.impl.JvfsFileStore</th>
 <th>Line</th></tr>
 <tr class="a">
 <td>Implement get usedspace.</td>
-<td>61</td></tr>
+<td>78</td></tr>
 <tr class="b">
 <th>de.weltraumschaf.jvfs.impl.JvfsFileSystem</th>
 <th>Line</th></tr>
 <tr class="a">
 <td>Check parent direcotries.</td>
-<td>230</td></tr></table></div>
+<td>231</td></tr></table></div>
 <div class="section">
 <h3><a name="tag_class_1">This may be considered.</a><a name="This_may_be_considered."></a></h3>
-<p><b>Number of occurrences found in the code: 1</b></p>
+<p><b>Number of occurrences found in the code: 6</b></p>
 <table border="0" class="table table-striped">
 <tr class="b">
-<th>de.weltraumschaf.jvfs.impl.JvfsPath</th>
+<th>de.weltraumschaf.jvfs.impl.JvfsFileStore</th>
 <th>Line</th></tr>
 <tr class="a">
+<td>Considder to implement this.</td>
+<td>103</td></tr>
+<tr class="b">
+<td>Considder to implement this.</td>
+<td>109</td></tr>
+<tr class="a">
+<th>de.weltraumschaf.jvfs.impl.JvfsPath</th>
+<th>Line</th></tr>
+<tr class="b">
 <td>Consider returning own implementation, because File will may be circumvent JVFS.</td>
-<td>447</td></tr></table></div></div>
+<td>447</td></tr>
+<tr class="a">
+<th>de.weltraumschaf.jvfs.impl.JvfsSeekableByteChannel</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Consider if necessary.</td>
+<td>82</td></tr>
+<tr class="a">
+<td>Consider not reusing channel and return always new channelswith position 0.</td>
+<td>91</td></tr>
+<tr class="b">
+<td>Consider not reusing channel and return always new channelswith position 0.</td>
+<td>130</td></tr></table></div></div>
                   </div>
             </div>
           </div>
